gnome-shell (3.8.3-1) UNRELEASED; urgency=low

  [ Jeremy Bicha ]
  * debian/control.in:
    - Don't recommend gnome-session-fallback

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
    + Bump minimum gir1.2-gtk-3.0 dependency.
      Thanks to Frederik Himpe <fhimpe@telenet.be>.
  * New upstream release.

 -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 31 May 2013 11:55:07 -0400

gnome-shell (3.8.2-1) experimental; urgency=low

  * New upstream release.
    + debian/control.in:
      - Update mutter dependencies.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 24 May 2013 17:34:32 +0200

gnome-shell (3.8.1-2) experimental; urgency=low

  * Team upload
  * Reinstate support for suspend via UPower using the user-menu, until
    our logind is new enough to take over (Closes: #704272)
  * Delay suspend for 1 second in the hope that that's long enough to lock
    the screen (works around #645716, but only if you suspend via the
    user-menu)

 -- Simon McVittie <smcv@debian.org>  Mon, 22 Apr 2013 11:17:11 +0100

gnome-shell (3.8.1-1) experimental; urgency=low

  * New upstream release
  * debian/control.in: Update mutter depends to 3.8.1

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 19 Apr 2013 23:45:29 +0200

gnome-shell (3.8.0.1-2) experimental; urgency=low

  * debian/control.in: Add gir1.2-telepathylogger-0.2 runtime depend

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 31 Mar 2013 22:36:06 +0200

gnome-shell (3.8.0.1-1) experimental; urgency=low

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 27 Mar 2013 19:12:49 +0100

gnome-shell (3.8.0-1) experimental; urgency=low

  [ Sjoerd Simons ]
  * debian/control.in: Bump caribou run-time depend to >= 0.4.8

  [ Emilio Pozuelo Monfort ]
  * New upstream release.
    + debian/control.in:
      - Bump mutter build and binary dependencies.
      - Remove build dependency on network-manager-dev now that
        libnm-glib-dev has been fixed.