@@ -38,7 +38,7 @@ Build-Depends: autotools-dev,
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.7.9),
                libibus-1.0-dev,
-               libmutter-dev (>= 3.8.2),
+               libmutter-dev (>= 3.8.3),
                libnm-glib-dev (>= 0.9.8) [linux-any],
                libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
                libnm-gtk-dev (>= 0.9.6) [linux-any],
@@ -51,7 +51,7 @@ Build-Depends: autotools-dev,
                libxfixes-dev,
                libxml2-dev,
                python (>= 2.6),
-               libgcr-3-dev (>= 3.3.90)
+               libgcr-3-dev (>= 3.7.5)
 Standards-Version: 3.9.3
 Homepage: http://live.gnome.org/GnomeShell
 Vcs-Svn: svn://anonscm.debian.org/svn/pkg-gnome/desktop/unstable/gnome-shell
@@ -69,7 +69,7 @@ Depends: ${gir:Depends},
          gir1.2-caribou-1.0 (>= 0.4.8),
          gir1.2-clutter-1.0 (>= 1.11.11),
          gir1.2-freedesktop,
-         gir1.2-gcr-3,
+         gir1.2-gcr-3 (>= 3.7.5),
          gir1.2-gconf-2.0,
          gir1.2-gkbd-3.0,
          gir1.2-glib-2.0 (>= 1.31),
@@ -77,7 +77,7 @@ Depends: ${gir:Depends},
          gir1.2-gnomedesktop-3.0 (>= 3.7.90),
          gir1.2-gtk-3.0 (>= 3.8),
          gir1.2-ibus-1.0 (>= 1.4),
-         gir1.2-mutter-3.0 (>= 3.8.2),
+         gir1.2-mutter-3.0 (>= 3.8.3),
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-nmgtk-1.0,
          gir1.2-pango-1.0,
